--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 - Display Day
 - Process CreditCardForm
 - Authentication
+
+http://stackoverflow.com/questions/8998496/xml-processor-module-not-found-error-when-try-to-consume-soap-service-by-using-s
+change paths to require relative
