--- a/TODO
+++ b/TODO
@@ -1,10 +1,12 @@
+===== Improvements =====
 - Display Day
-- Process CreditCardForm
 - Authentication
 
+===== To Document =====
 http://stackoverflow.com/questions/8998496/xml-processor-module-not-found-error-when-try-to-consume-soap-service-by-using-s
 change paths to require relative
 
+===== Requirements =====
 - UsaEpay Logo
 - Authorization Statemnt
 - Take out Per Person in the header, header should be same as old forms
@@ -15,3 +17,5 @@ change paths to require relative
 - Coach 1-10
 - Company Policy Disclosures
 - Make sure email is sent to info@miamilimocoach.com
+- Add ability to delete reservation
+- calendar event label = {Coach #}/{pickup time}
